Fix Javadoc issues